<resources>

    <!-- opening and closing strings for the NavigationDrawer -->
    <string name="open">open navigation drawer</string>
    <string name="close">close navigation drawer</string>

    <!-- The name of our app -->
    <string name="app_name">Pollster</string>

    <!-- Strings for Title of Options in the NavigationDrawer -->
    <string name="categories">Categories</string>
    <string name="my_posts">My Posts</string>
    <string name="my_votes">My Votes</string>
    <string name="find_friends">Find Friends</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>

    <string name="action_settings">Settings</string>

    <!-- These are Strings for the User to choose the categories they want -->
    <string name="categories_label">Categories</string>
    <string name="all_categories_label">All Categories</string>
    <string name="sports_label">Sports</string>
    <string name="shopping_label">Shopping</string>
    <string name="nature_label">Nature</string>
    <string name="electronics_label">Electronics</string>
    <string name="movies_label">Movies</string>
    <string name="academics_label">Academics</string>
    <string name="books_label">Books</string>
    <string name="food_label">Food</string>
    <string name="miscellaneous_label">Miscellaneous</string>

    <!-- Save and Cancel Button Strings for Category selection -->
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>

    <string name="vote_stats_label">Vote Statistics</string>
    <string name="vote_stats_label_a">Option A</string>
    <string name="vote_stats_label_b">Option B</string>
    <string name="vote_stats_label_c">Option C</string>
    <string name="vote_stats_label_d">Option D</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string-array name="category_titles">
        <item>All Categories</item>
        <item>Sports</item>
        <item>Shopping</item>
        <item>Nature</item>
    </string-array>
    <string name="action_profile">Profile</string>
    <string name="action_my_post">My Post</string>

    <string name="username_et_hint">Username</string>
    <string name="password_et_hint">Password</string>
    <string name="login_button_text">Log in</string>
    <string name="signup_button_text">Sign up</string>

    <string-array name="categories">
        <item>Misc</item>
        <item>Academics</item>
        <item>Books</item>
        <item>Electronics</item>
        <item>Food</item>
        <item>Misc</item>
        <item>Movies</item>
        <item>Nature</item>
        <item>Shopping</item>
        <item>Sports</item>
    </string-array>

    <string name="next">Next Post</string>
    <string name="no_more_posts">Oh, no! You\'ve seen all of your friend\'s posts, try back again later!</string>

    <string name="selImg1">Select Image 1 below</string>
    <string name="selImg2">Select Image 2 below</string>
    <string name="saveNewPost">Post it!</string>


</resources>
