<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.umd.cs.agileandroid.LoginFragment"

    >

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password_et"
        android:hint="@string/password_et_hint"
        android:layout_below="@+id/username_et"
        android:layout_alignLeft="@+id/username_et"
        android:layout_alignStart="@+id/username_et"
        android:textAlignment="center"
        android:textCursorDrawable="@null"/>

    <Button
        android:text="@string/login_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/login_button"
        android:layout_below="@+id/password_et"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/signup_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_button"
        android:layout_marginBottom="33dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/login_button"
        android:layout_alignStart="@+id/login_button" />

    <ImageView
        android:layout_height="200dp"
        app:srcCompat="@drawable/logo_title"
        android:id="@+id/logo_title"
        android:layout_weight="1"
        android:layout_width="300dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/username_et"
        android:hint="@string/username_et_hint"
        android:textAlignment="center"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/logo_title"
        android:layout_centerHorizontal="true"
        android:textCursorDrawable="@null"/>

</RelativeLayout>
